<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="#4668A6">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:layout_marginTop="30dip"
        android:textColor="#FFFFFF"
        android:textColorHint="#C0C0C0"
        android:backgroundTint="#FFFFFF" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#C0C0C0"
        android:backgroundTint="#FFFFFF" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignParentRight="true"
        android:text="@string/login_button"
        android:id="@+id/login"
        android:layout_marginTop="30dip"
        android:background="#FFFFFF"
        android:onClick="loginApp" />

</RelativeLayout>
